# intro-refinement-types

./: .gitmodules  01-intro.html  02-refinements.html  03-examples.html  04-abstracting.html  05-concl.html  Makefile  README.md  TODO.md  index.html  intro-refinement-types.cabal  stack.yaml
docs/: index.html
src/: 00-plan.lhs  00-plmw.lhs  01-intro.lhs  02-refinements.lhs  03-example-vectors.lhs  03-examples.lhs  04-abstracting.lhs  04-data-properties.lhs  04-termination.lhs  05-concl.lhs  05-data-legal.lhs  05-data-properties.lhs  05-example-sort.lhs  05-reflection.lhs  06-concl.lhs  06-example-interpreter.lhs  06-example-sort.lhs  07-data-legal.lhs  07-example-interpreter.lhs  08-example-bytestring.lhs  (+9 more)
src-120/: 01-index.lhs  02-refinements.lhs  03-datatypes.lhs  04-case-study-insertsort.lhs  05-case-study-eval.lhs  05-termination.lhs  06-reflection.lhs  07-case-study-map-reduce.lhs  07-structural-induction.lhs  08-case-study-map-reduce.lhs  09-termination.lhs
src-25/: 01-intro.lhs  02-refinements.lhs  03-examples.lhs  04-abstracting.lhs  05-concl.lhs
src-CMSC498V/: 01-index.lhs  02-refinements.lhs  03-datatypes.lhs  04-insert-sort.lhs  05-termination.lhs  06-reflection.lhs  07-structural-induction.lhs  09-natural-deduction.lhs
src-cav19/: 02-refinements.lhs  04-data-properties.lhs  05-example-sort.lhs  07-data-legal.lhs  11-example-opt.lhs
src-pldi17/: 01-intro.lhs  03-examples.lhs
src-plmw16/: 02-refinements.lhs  07-mini.lhs  09-plmw.lhs
src-reflection/: 01-index.lhs  02-reflection.lhs  03-laws-for-lists.lhs  03-map-reduce.lhs  04-natural-deduction.lhs
(+65 files in other folders)
